// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar 1`] = `
<figure
  class="s-engCJu8q-fNe"
  style="--dimension: 150px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
>
  <img
    alt="avatar for Joe le clodo"
    class="s-engCJu8q-fNe hasImage"
    height="150"
    referrerpolicy="no-referrer"
    src="/tests/components/avatar.png"
    width="150"
  />
   
</figure>
`;

exports[`Positioned text 1`] = `
<figure
  class="s-engCJu8q-fNe positioned colored"
  style="--dimension: 60px; --color: red; --top: 150px; --left: 0px; --border-width: 3px"
>
  <img
    alt="avatar for Joe le clodo"
    class="s-engCJu8q-fNe"
    height="60"
    referrerpolicy="no-referrer"
    width="60"
  />
   
  <figcaption
    class="s-engCJu8q-fNe"
  >
    Joe le clodo
  </figcaption>
</figure>
`;

exports[`Positionned avatar 1`] = `
<figure
  class="s-engCJu8q-fNe positioned colored"
  style="--dimension: 60px; --color: lime; --top: 150px; --left: 0px; --border-width: 3px"
>
  <img
    alt="avatar for Joe le clodo"
    class="s-engCJu8q-fNe hasImage"
    height="60"
    referrerpolicy="no-referrer"
    src="/tests/components/avatar.png"
    width="60"
  />
   
</figure>
`;

exports[`Small text 1`] = `
<figure
  class="s-engCJu8q-fNe"
  style="--dimension: 50px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 0px"
>
  <img
    alt="avatar for Joe le clodo"
    class="s-engCJu8q-fNe"
    height="50"
    referrerpolicy="no-referrer"
    width="50"
  />
   
  <figcaption
    class="s-engCJu8q-fNe abbreviated"
  >
    JL
  </figcaption>
</figure>
`;

exports[`Text 1`] = `
<figure
  class="s-engCJu8q-fNe"
  style="--dimension: 150px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
>
  <img
    alt="avatar for Joe le clodo"
    class="s-engCJu8q-fNe"
    height="150"
    referrerpolicy="no-referrer"
    width="150"
  />
   
  <figcaption
    class="s-engCJu8q-fNe"
  >
    Joe le clodo
  </figcaption>
</figure>
`;
